--- a/web/main.html
+++ b/web/main.html
@@ -15,6 +15,7 @@
         <div class="waterdrop"></div>
         <h1 class="appname">Nifty Hammer!</h1>
         <h3 class="description">Find Hammers and Inverted Hammers in the Nifty 50 Index</h2>
+        <button class="continue">Continue</button>
     <!-- <div style="height: 50px; width:50px; background-color: pink;"></div> -->
     <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
 </body>
