Added functionality to continue button

--- a/web/main.html
+++ b/web/main.html
@@ -12,10 +12,12 @@
     
 </head>
 <body>
-        <div class="waterdrop"></div>
-        <h1 class="appname">Nifty Hammer!</h1>
-        <h3 class="description">Find Hammers and Inverted Hammers in the Nifty 50 Index</h2>
-        <button class="continue">Continue</button>
+        <div id="waterdrop"></div>
+        <h1 id="appname">Nifty Hammer!</h1>
+        <h3 id="description">Find Hammers and Inverted Hammers in the Nifty 50 Index</h2>
+            <div id="btncontainer">
+                <button id="continue" onclick="clearPage()">continue</button>
+            </div>
     <!-- <div style="height: 50px; width:50px; background-color: pink;"></div> -->
     <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
 </body>
