--- a/web/testing.html
+++ b/web/testing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-    .waterdrop{
+    /* .waterdrop{
     margin: auto; 
     height: 30px;
     width: 30px;
@@ -46,14 +46,33 @@
     to{
         background-image: linear-gradient( 45deg,#e66465, #9198e5);
     }
-}
+} */
+    #loading{
+        color:black;
+        font-style: oblique 25deg ;  
+        animation: blink 2s infinite; 
+        animation-timing-function: linear;
+        animation-direction: alternate;
+    }
+
+    @keyframes blink {
+        from{
+            color:black;
+            font-style: oblique 25deg ; 
+            opacity: 100;
+        }
+
+        to{
+            color:white;
+            font-style: oblique 25deg ; 
+            opacity: 0;
+        }
+    }
 
     </style>
     <title>Document</title>
 </head>
 <body>
-    <div class="waterdrop"></div>
-
-    
+    <h3 id="loading">Loading...</h3>
 </body>
 </html>
